<resources>
    <string name="app_name">WorkVersion</string>
    <string name="str_enter">Войти</string>
    <string name="str_registration">Зарегестрироваться</string>
    <string name="str_password">Пароль</string>
    <string name="str_login">Логин</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="text_academ"> <b>Академический отпуск</b>\n\n
        В случае невозможности прохождения обучения студент может оформить академический отпуск. Длительность академического отпуска - не более двух лет.\n\n
        Во время академического отпуска студент освобождается от обязанности прохождения обучения и не допускается к посещению занятий до завершения отпуска.\n\n
        <b>ВАЖНО:</b>
        \n<b>1)</b> Если студент-бюджетник ушел в академический отпуск, то за ним сохраняется его бюджетное место. \n<b>2)</b> Студент, обучающийся на целевой основе, в период академического отпуска не платит за свое обучение.\n\n
        «Академ» предоставляется студенту неограниченное количество раз. При этом стипендиальные выплаты студенту сохраняются (при условии их получения). Однако, со студентами, проживающими в общежитии и ушедшими в академический отпуск, договор найма помещения <b>РАСТОРГАЕТСЯ</b>.\n\n
        <b>ВАЖНО:</b> для юношей на время академического отпуска, взятого в первый раз, предоставляется отсрочка от армии. На последующие «академы» отсрочки <b>НЕТ</b>.\n\n
        Для оформления академического отпуска студенту необходимо предоставить в деканат заявление с одним из документов из списка:\n
        \n<b>-</b> заключения врачебной комиссии медицинской организации для предоставления отпуска по медицинским показаниям;
        \n<b>-</b> выданного в установленном порядке листка нетрудоспособности для предоставления отпуска по беременности и родам;
        \n<b>-</b> заверенной копии свидетельства о рождении ребенка для предоставления отпуска по уходу за ребенком до достижения им возраста трех лет;
        \n<b>-</b> повестки (заверенной копии) военного комиссариата, содержащей время и место отправки, для предоставления отпуска в случае призыва на военную службу;
        \n<b>-</b> документов, подтверждающих чрезвычайность ситуации, для предоставления отпуска по семейным и иным обстоятельствам (при наличии).\n\n
        Для выхода из академического отпуска студент подает личное заявление, подписанное деканом факультета, в Центр организации и мониторинга учебного процесса.\n\n\n\n</string>
    <string name="text_progress"> <b>Зачет индивидуальных достижений</b>\n\n
        Зачет индивидуальных достижений студента ведется по средствам ведения им электронного портфолио. Электронное портфолио – это комплект документов (сканов грамот, научных работ, волонтерской книжки и т.д.), представленный в электронном виде для наглядного анализа успешности студента.\n\n
        Для формирования портфолио студенту необходимо зарегистрироваться на портале ЯрГУ (<b><a href="http://www.portal.uniyar.ac.ru">Портал ЯрГУ</a></b> ). Регистрация осуществляется путем ввода номера студенческого билета.\n\n
        Формирование <b>ЭП ОБЯЗАТЕЛЬНО</b>, если студент претендует на получение <b>ПГАС</b>, именных стипендий.\n\n
        <b>ЭП</b> формируется с первого года обучения в университете, ответственность за его актуальность и достоверность лежит на студенте.\n\n
        <b>Примечание:</b>  Начать формировать портфолио можно в любой момент обучения. Но лучше начинать с первого курса – меньше вероятность потерять что-то важное.\n\n
        <b><a href="https://www.uniyar.ac.ru/upload/uf/fcc/YArGU_SK_P_130_2017-Polozhenie-o-poryadke-formirovaniya-portfolio.pdf">Положение о порядке формирования портфолио</a></b>\n\n\n\n</string>
    <string name="text_pgas"> <b>ПГАС </b> – повышенная государственная академическая стипендия.
        \n\n Назначается за особые успехи в учебной, научно-исследовательской, общественной, культурно-творческой и спортивной деятельности в результате конкурсного отбора среди студентов, подавших документы на получение стипендии.\n\n
        Чтобы претендовать на получение ПГАС необходимо подать заявление и прикрепить к нему следующие документы:\n\n
        <b>·</b> реестр достижений студента;\n
        <b>·</b> копии свидетельств, грамот, дипломов и т.д., подтверждающих достижения в соответствующих видах деятельности;\n
        <b>·</b> список научных трудов, публикаций, публичных выступлений, примеров общественной деятельности (сканы волонтерской книжки);\n
        <b>·</b> список мероприятий (научно-практических конференций и др.) с подтверждающими документами (свидетельства, грамоты).\n\n
        Обычно ПГАС назначается за успехи в какой-то одной области. Однако при наличии достижений в нескольких областях ПГАС может назначаться в увеличенном размере, при условии занимания студентом 1-5 позиций в рейтинге претендентов на выплату ПГАС и наличия у университета финансовой возможности.\n\n
        *Больше всего шансов получить ПГАС за успехи в научно-исследовательской деятельности (40% от числа всех получающих ПГАС)\n\n
        <b>ВАЖНО:</b> Реестр достижений, не подкрепленный подтверждающими документами, не рассматривается, а значит, стипендия <b>НЕ НАЗНАЧАЕТСЯ! </b>\n\n\n</string>
    <string name="money_text_c"> <b>Государственная социальная стипендия</b>\n\n
        На выплату государственной социальной стипендии могут претендовать лица следующих категорий:\n\n
        <b>-</b> дети-сироты и дети, оставшиеся без попечения родителей (лица до 18 лет);\n
        <b>-</b> лица из числа детей-сирот и детей, оставшихся без попечения родителей (лица после 18 лет);\n
        <b>-</b> лица, потерявшие в период обучения обоих родителей или единственного родителя;\n
        <b>-</b> дети-инвалиды, инвалиды I и II групп, инвалиды с детства;\n
        <b>-</b> лица, подвергшиеся воздействию радиации вследствие катастрофы на Чернобыльской АЭС и иных радиационных катастроф, вследствие ядерных испытаний на Семипалатинском полигоне;\n
        <b>-</b> лица, являющиеся инвалидами вследствие военной травмы или заболевания, полученных в период прохождения военной службы, и ветеранами боевых действий;\n
        <b>-</b> лица, получившие государственную социальную помощь;\n
        <b>-</b> лица из числа граждан, проходивших в течение не менее трех лет военную службу по контракту на воинских должностях, подлежащих замещению солдатами, матросами, сержантами, старшинами, и уволенных с военной службы по основаниям, предусмотренным подпунктами «б» – «г» пункта 1, подпунктом «а» пункта 2 и подпунктами «а» – «в» пункта 3 статьи 51 Федерального закона от 28.03.1998 № 53-ФЗ (далее – студенты из числа граждан, проходивших военную службу).\n\n
        Стипендия назначается со дня предоставления в университет документа, подтверждающего отношение студента к какой-либо льготной категории. Если документ является бессрочным, социальная стипендия выплачивается до конца обучения. Студенту, получившему социальную помощь от государства, стипендия назначается сроком на 1 год.\n\n
        Список документов, необходимых к подаче:\n\n
        <b>·</b> Заявление на получение социальной стипендии\n
        <b>·</b> Документы, подтверждающие льготный статус\n
        <b>·</b> Справку из органа соц. поддержки по месту постоянного проживания о получении социальной помощи\n\n
        <b>ВАЖНО:</b> Документы нужно предоставить <b>ДО 1 ЧИСЛА</b> месяца.\n\n
        <b>Повышенная государственная социальная стипендия</b>\n\n
        Повышенная социальная государственная стипендия может назначаться студентам, которые:\n\n
        <b>1.</b> Обучаются на 1-2 курсе на бюджете\n
        <b>2.</b> Не имеют оценок «удовлетворительно» и академической задолженности по предметам\n
        <b>3.</b> Имеют право на получение социальной стипендии\n
        <b>ИЛИ</b>\n
        <b>1.</b> Являются студентами в возрасте до 20 лет\n
        <b>2.</b> Имеют одного родителя-инвалида I группы\n\n
        Повышенная социальная стипендия назначается вместо обычной социальной стипендии при наличии ГАС.\n\n\n</string>
    <string name="money_text_a"> <b>Государственная академическая стипендия (ГАС)</b> – стипендия, которую получают студенты, обучающиеся за счет бюджета государства по очной форме обучения. <b>ГАС</b> назначается в зависимости от успехов в учебе, а именно:\n
        \n<b>А.</b> при сдаче сессии на оценки «хорошо» - назначается базовый размер стипендии,
        \n<b>Б.</b> при сдаче сессии на «хорошо» и «отлично» - стипендия увеличивается на 25% (считать от базового),
        \n<b>В.</b> при сдаче сессии на «отлично» - размер стипендии увеличивается в 1.5 раза (от базового размера).\n\n
        Стипендия выплачивается только при условии отсутствия академических задолженностей и оценок <b>«удовлетворительно»</b> за экзамены.\n\n
        <b>ВАЖНО:</b> при назначении стипендии учитываются оценки за практику, курсовые работы и проекты.\n\n
        Студентам-первокурсникам в первом семестре также начисляется стипендия в соответствии с нормативом, установленным Правительством РФ. В 2019-2020 учебном году ее размер составлял <b>1697 рублей.</b>\n\n
        Размеры <b>ГАС</b> в 2019-2020 учебном годах:\n
        \n<b>А.</b> при сдаче сессии на оценки «хорошо» - 2800 рублей,
        \n<b>Б.</b> при сдаче сессии на оценки «хорошо» и «отлично» - 3500 рублей,
        \n<b>В.</b> при сдаче сессии на оценки «отлично» - 4200 рублей.\n\n\n</string>
    <string name="title_money"> <b>Стипендии</b> </string>
    <string name="money_pgas"> <b>2. Повышенная государственная академическая стипендия </b></string>
    <string name="money_a"> <b>1. Государственная академическая стипендия </b></string>
    <string name="money_c"> <b> 3. Государственная социальная стипендия</b> </string>
    <string name="money_d"> <b> 4. Стипендии губернатора</b> </string>
    <string name="money_e"> <b> 5. Стипендии Правительства РФ и Президента РФ</b> </string>
    <string name="money_f"> <b> 6. Стипендия Миронова</b> </string>
    <string name="money_g"> <b> 7. Стипендия Сретенского</b> </string>
    <string name="tv_mat_help"><b>Материальная помощь</b> </string>
    <string name="new_line">\n\n\n\n </string>
    <string name="about_text_1"><b>Менеджер</b>\nХудяков Д.Е.</string>
    <string name="about_text_2"><b>Web-разработчик</b>\nЕвдокимова А.Ю.</string>
    <string name="about_text_3"><b>Android-разработчик</b>\nЦипилева К.А.</string>
    <string name="about_text_4"><b>Python-Разработчик</b>\nЛоктистов В.С.</string>
    <string name="about_text_5"><b>Контент-менеджер</b>\nКропанова К.О.</string>
    <string name="about_text_6"><b>Дизайнер</b>\nКустова А.А.</string>
    <string name="about_text_7"><b>Тестировщик</b>\nИванов Д.А.</string>
    <string name="text_entrance"><b>Подача документов</b></string>
    <string name="documents"><b>Документы</b></string>
    <string name="deadlines"><b>Сроки подачи</b></string>
    <string name="ways"><b>Способы подачи</b></string>
    <string name="counts_places"><b>Количество мест и стоимость</b></string>
</resources>