<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_money"
                android:text="@string/title_money"
                android:textSize="20sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_a"
                android:layout_below="@id/tv_money"
                android:text="@string/money_a"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pgas"
                android:layout_below="@id/money_a"
                android:text="@string/money_pgas"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_c"
                android:layout_below="@id/pgas"
                android:text="@string/money_c"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_d"
                android:layout_below="@id/money_c"
                android:text="@string/money_d"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_e"
                android:layout_below="@id/money_d"
                android:text="@string/money_e"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_f"
                android:layout_below="@id/money_e"
                android:text="@string/money_f"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_g"
                android:layout_below="@id/money_f"
                android:text="@string/money_g"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mat_help"
                android:layout_below="@id/money_g"
                android:text="@string/tv_mat_help"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>