<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_entrance"
                android:text="@string/text_entrance"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_documents"
                android:layout_below="@id/tv_entrance"
                android:text="@string/documents"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_deadlines"
                android:layout_below="@id/tv_documents"
                android:text="@string/deadlines"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ways"
                android:layout_below="@id/tv_deadlines"
                android:text="@string/ways"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_count_places"
                android:layout_below="@id/tv_ways"
                android:text="@string/counts_places"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/kerri"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/tv_count_places"
                android:layout_marginTop="25dp"
                android:src="@drawable/kerri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/kerri"
                android:text="@string/new_line" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>