<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar9"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Стипендии"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/tv_money"-->
<!--                android:text="@string/title_money"-->
<!--                android:textSize="20sp"-->
<!--                android:padding="10dp"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_a"
                android:text="@string/money_a"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pgas"
                android:layout_below="@id/money_a"
                android:text="@string/money_pgas"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_c"
                android:layout_below="@id/pgas"
                android:text="@string/money_c"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_d"
                android:layout_below="@id/money_c"
                android:text="@string/money_d"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_e"
                android:layout_below="@id/money_d"
                android:text="@string/money_e"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_f"
                android:layout_below="@id/money_e"
                android:text="@string/money_f"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_g"
                android:layout_below="@id/money_f"
                android:text="@string/money_g"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorGrey"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/money_g"
                android:text="@string/new_line"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>